--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
 
 {% block body%}
 
-  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
 
 {% block navbar %}
   <nav class="navbar navbar-inverse navbar-fixed-top">        
