--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -54,6 +54,16 @@
             
         {% endif %}
         </div>
+
+        <div class="row">
+            <div class="col-md-10">
+                <div class="btn-group btn-group-lg pull-right">
+                    <button type="button" class="btn" id="Done" style="background-color:#080808;color:#ccc;">Done</button>
+                    <button type="button" class="btn" id="DoneBack" style="background-color:#080808;color:#ccc;">Done & Back</button>
+                  </div>
+            </div>
+            <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
+        </div>
     </div>
         
 {% endblock %}
