--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -3,67 +3,69 @@
 {% block title %}KimoAssistant - Gallery{% endblock %}
 
 {% block content %}
-    {{ super() }}
+{{ super() }}
 {% endblock %}
 
 {% block style %}
-    {{ super() }}
+{{ super() }}
 {% endblock %}
 
 {% block scripts %}
-    {{ super() }}
-    <script type= text/javascript src="{{ url_for('static', filename='js/gallery.js') }}"></script>
+{{ super() }}
+<script type=text/javascript src="{{ url_for('static', filename='js/gallery.js') }}"></script>
 {% endblock %}
 
 {% block inside_right %}
-    <div class="baha">
-        <div id="unfold" onclick="switchDisplay('baha-url-input');">
+<div class="baha">
+    <div id="unfold" onclick="switchDisplay('baha-url-input');">
         <h1 id="txt1">▼輸入巴哈圖串網址</h1>
+    </div>
+    <br>
+    <div class="form-group" id="baha-url-input" style="display: none;">
+        <input type="text" id="_url" name="">
+        <input type="button" id="Submit" value="Submit">
+    </div>
+
+    <p id="flash"></p>
+
+</div>
+
+<!-- show image -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-10">
+            <div class="btn-group btn-group-lg pull-right">
+                <button type="button" class="btn Done" style="background-color:#080808;color:#ccc;">Done</button>
+                <button type="button" class="btn DoneBack" style="background-color:#080808;color:#ccc;">Done &
+                    Back</button>
+            </div>
         </div>
+        <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
+    </div>
+
+
+    {% if data != None %}
+    <div class="row" , id="canvas">
+        {% for img in data['img_ls'] %}
+        <div class="col-md-5">
+            <a href="{{ img }}"><img src="{{ img }}" width=100%></a>
             <br>
-        <div class="form-group" id="baha-url-input" style="display: none;">
-            <input type="text" id="_url" name="">
-            <input type="button" id="Submit" value="Submit">
         </div>
+        {% endfor %}
 
-        <p id="flash"></p>
-
-    </div>
-
-    <!-- show image -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10">
-                <div class="btn-group btn-group-lg pull-right">
-                    <button type="button" class="btn" id="Done" style="background-color:#080808;color:#ccc;">Done</button>
-                    <button type="button" class="btn" id="DoneBack" style="background-color:#080808;color:#ccc;">Done & Back</button>
-                  </div>
-            </div>
-            <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
-        </div>
-
-        
-        {% if data != None %}
-        <div class="row", id="canvas">
-            {% for img in data['img_ls'] %}
-                <div class="col-md-5">
-                    <a href="{{ img }}"><img src="{{ img }}" width=100%></a>
-                    <br> 
-                </div>
-            {% endfor %}
-            
         {% endif %}
-        </div>
-
-        <div class="row">
-            <div class="col-md-10">
-                <div class="btn-group btn-group-lg pull-right">
-                    <button type="button" class="btn" id="Done" style="background-color:#080808;color:#ccc;">Done</button>
-                    <button type="button" class="btn" id="DoneBack" style="background-color:#080808;color:#ccc;">Done & Back</button>
-                  </div>
-            </div>
-            <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
-        </div>
     </div>
-        
+
+    <div class="row">
+        <div class="col-md-10">
+            <div class="btn-group btn-group-lg pull-right">
+                <button type="button" class="btn Done" style="background-color:#080808;color:#ccc;">Done</button>
+                <button type="button" class="btn DoneBack" style="background-color:#080808;color:#ccc;">Done &
+                    Back</button>
+            </div>
+        </div>
+        <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
+    </div>
+</div>
+
 {% endblock %}
