--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -1,21 +1,6 @@
-{% extends "base.html" %}
-
-{% block title %}KimoAssistant - Gallery{% endblock %}
-
-{% block content %}
-{{ super() }}
-{% endblock %}
-
-{% block style %}
-{{ super() }}
-{% endblock %}
-
-{% block scripts %}
-{{ super() }}
+{% extends "base.html" %} {% block title %}KimoAssistant - Gallery{% endblock %} {% block content %} {{ super() }} {% endblock %} {% block style %} {{ super() }} {% endblock %} {% block scripts %} {{ super() }}
 <script type=text/javascript src="{{ url_for('static', filename='js/gallery.js') }}"></script>
-{% endblock %}
-
-{% block inside_right %}
+{% endblock %} {% block inside_right %}
 <div class="baha">
     <div id="unfold" onclick="switchDisplay('baha-url-input');">
         <h1 id="txt1">▼輸入巴哈圖串網址</h1>
@@ -45,15 +30,16 @@
 
 
     {% if data != None %}
+    <div class="col-md-2">
+        <img class="" src="{{ url_for('static', filename='img/bookSearch/loading.gif') }}" alt="Loading" width="90px" id="loading" style="display:none;padding-top:20px">
+    </div>
     <div class="row" , id="canvas">
         {% for img in data['img_ls'] %}
         <div class="col-md-5">
             <a href="{{ img }}"><img src="{{ img }}" width=100%></a>
             <br>
         </div>
-        {% endfor %}
-
-        {% endif %}
+        {% endfor %} {% endif %}
     </div>
 
     <div class="row">
