--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -1,57 +1,73 @@
-{% extends "base.html" %} {% block title %}KimoAssistant - Gallery{% endblock %} {% block content %} {{ super() }} {% endblock %} {% block style %} {{ super() }} {% endblock %} {% block scripts %} {{ super() }}
-<script type=text/javascript src="{{ url_for('static', filename='js/gallery.js') }}"></script>
-{% endblock %} {% block inside_right %}
-<div class="baha">
-    <div id="unfold" onclick="switchDisplay('baha-url-input');">
-        <h1 id="txt1">▼輸入巴哈圖串網址</h1>
-    </div>
-    <br>
-    <div class="form-group" id="baha-url-input" style="display: none;">
-        <input type="text" id="_url" name="">
-        <input type="button" id="Submit" value="Submit">
-    </div>
+{% extends "base.html" %} 
 
-    <p id="flash"></p>
+{% block title %}KimoAssistant - Gallery{% endblock %} 
 
-</div>
+{% block style %} 
+    {{ super() }} 
+{% endblock %} 
+
+{% block scripts %} 
+    {{ super() }}
+{% endblock %} 
+
+{% block inside_right %}
+    <div class="baha">
+        <div id="unfold" onclick="switchDisplay('baha-url-input');">
+            <h1 id="txt1">▼輸入巴哈圖串網址</h1>
+        </div>
+        <br>
+        <div class="form-group" id="baha-url-input" style="display: none;">
+            <input type="text" id="_url" name="">
+            <input type="button" id="Submit" value="Submit">
+        </div>
+
+        <p id="flash"></p>
+
+    </div>
 
 <!-- show image -->
-<div class="container">
-    <div class="row">
-        <div class="col-md-10">
-            <div class="btn-group btn-group-lg pull-right">
-                <button type="button" class="btn Done" style="background-color:#080808;color:#ccc;">Done</button>
-                <button type="button" class="btn DoneBack" style="background-color:#080808;color:#ccc;">Done &
-                    Back</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10">
+                <div class="btn-group btn-group-lg pull-right">
+                    <button type="button" class="btn Done" style="background-color:#080808;color:#ccc;">Done</button>
+                    <button type="button" class="btn DoneBack" style="background-color:#080808;color:#ccc;">Done &
+                        Back</button>
+                </div>
             </div>
+            <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
         </div>
-        <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
-    </div>
 
 
-    {% if data != None %}
-    <div class="col-md-2">
-        <img class="" src="{{ url_for('static', filename='img/bookSearch/loading.gif') }}" alt="Loading" width="90px" id="loading" style="display:none;padding-top:20px">
-    </div>
-    <div class="row" , id="canvas">
-        {% for img in data['img_ls'] %}
-        <div class="col-md-5">
-            <a href="{{ img }}"><img src="{{ img }}" width=100%></a>
-            <br>
+        {% if data != None %}
+        <div class="col-md-2">
+            <img class="" src="{{ url_for('static', filename='img/bookSearch/loading.gif') }}" alt="Loading" width="90px" id="loading" style="display:none;padding-top:20px">
         </div>
-        {% endfor %} {% endif %}
-    </div>
-
-    <div class="row">
-        <div class="col-md-10">
-            <div class="btn-group btn-group-lg pull-right">
-                <button type="button" class="btn Done" style="background-color:#080808;color:#ccc;">Done</button>
-                <button type="button" class="btn DoneBack" style="background-color:#080808;color:#ccc;">Done &
-                    Back</button>
+        <div class="row" , id="canvas">
+            {% for img in data['img_ls'] %}
+            <div class="col-md-5">
+                <a href="{{ img }}"><img src="{{ img }}" width=100%></a>
+                <br>
             </div>
+            {% endfor %} {% endif %}
         </div>
-        <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
-    </div>
-</div>
 
+        <div class="row">
+            <div class="col-md-10">
+                <div class="btn-group btn-group-lg pull-right">
+                    <button type="button" class="btn Done" style="background-color:#080808;color:#ccc;">Done</button>
+                    <button type="button" class="btn DoneBack" style="background-color:#080808;color:#ccc;">Done &
+                        Back</button>
+                </div>
+            </div>
+            <!-- <button onclick="downFunction()" id="downBtn" title="Go to End">End</button> -->
+        </div>
+    </div>
+
+{% endblock %}
+
+{% block endScripts %}
+    {{ super() }}
+    
+    <script type=text/javascript src="{{ url_for('static', filename='js/gallery.js') }}"></script>
 {% endblock %}
