--- a/app/templates/log.html
+++ b/app/templates/log.html
@@ -2,11 +2,7 @@
 
 {% block title %}KimoAssistant - Log{% endblock %}
 
-{% block content %}
-    {{ super() }}
-{% endblock %}
-
-{% block style %}
+{% block styles %}
     {{ super() }}
 {% endblock %}
 
@@ -15,12 +11,11 @@
 {% endblock %}
 
 {% block inside_right %}
-    <textarea style="width: 100%; height: 90%;">
+    <textarea style="width: 100%; height: 800px;" readonly>
         {% for log in data %}
                 {{ log.datetime }} : {{ log.title }}
                 {{ log.msg }}
                 -------------
-        {% endfor %}
-        
+        {% endfor %}        
     </textarea>
 {% endblock %}
